...
                if model.isHalfTime {
                    halfTimeView
                } else {
                    runningMatchView
                }
        }
        .accessibilityIdentifier("timerArea")
        .padding(.top)
        .onLongPressGesture(minimumDuration: 0.8) {
            // Allow long press when match is running or during half-time
            if model.isMatchInProgress || model.isHalfTime {
                WKInterfaceDevice.current().play(.notification)
                showingActionSheet = true
...
